--- a/podcasts/templates/results-options.html
+++ b/podcasts/templates/results-options.html
@@ -29,7 +29,7 @@
               {% endif %}
             </form>
           {% endif %}
-          <a class="btn-dope episodes-button" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse"
+          <a class="btn-dope showpod-button" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse"
             title="Show Episodes">
             <span class="active">
               Episodes
@@ -38,7 +38,7 @@
               <i class="fas fa-bars"></i>
             </span>
           </a>
-          <a class="btn-dope reviews-button" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse"
+          <a class="btn-dope showpod-button" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse"
             title="Show Reviews">
             <span class="active">
               Reviews
