--- a/index/static/style.css
+++ b/index/static/style.css
@@ -559,7 +559,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 .episodes-table {
   table-layout: fixed;
-  margin: 30px 00;
+  margin: 30px 0 0;
 }
 .episodes-table th,
 .episodes-table th,
@@ -639,9 +639,6 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .dope-options {
   padding: 0;
   border-bottom: 2px solid rgba(0, 191, 165, .3);
-}
-.showpod .dope-options {
-  border: none;
 }
 .episodes-content {
   position: relative;
