--- a/podcasts/templates/reviews.html
+++ b/podcasts/templates/reviews.html
@@ -1,5 +1,12 @@
-<div class="col-12 dope-wrapper fade collapse showpod-collapse" id="reviews-collapse">
-  <p>
-    Coming soon!
-  </p>
+<div class="col-12 px-0 fade collapse showpod-collapse" id="reviews-collapse">
+  <div class="results-bar color-3">
+    <h1>
+      Reviews
+    </h1>
+  </div>
+  <div class="dope-wrapper">
+    <p>
+      Coming soon!
+    </p>
+  </div>
 </div>
