--- a/podcasts/templates/results_bar.html
+++ b/podcasts/templates/results_bar.html
@@ -25,6 +25,14 @@
     {% endif %}
     <h1>
       {{ results.header }}
+      {% if results.view == "popular" %}
+        <span>
+          genre
+        </span>
+        <span class="d-none">
+          language
+        </span>
+      {% endif %}
     </h1>
   </div>
 </div>
