--- a/podcasts/templates/player.html
+++ b/podcasts/templates/player.html
@@ -20,8 +20,8 @@
       </div>
       <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
         <img class="img-fluid" src="//{{ episode.podcast.artworkUrl }}100x100bb.jpg"
-          onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" alt="{{ episode.podcast.title }}"
-          width="auto" height="auto" />
+          onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" title="{{ episode.podcast.title }}"
+          width="auto" height="auto" alt="Podcast artwork" />
       </a>
       <div class="dope-buttons dope-buttons-r p-0 float-right">
         <button class="btn-dope player-minimize" aria-expanded="true" title="Minimize">
