--- a/podcasts/templates/previous.html
+++ b/podcasts/templates/previous.html
@@ -6,8 +6,8 @@
           <span class="result-length">{{ episode.length }}</span>
         {% endif %}
         <img class="img-fluid lazyload" data-src="//{{ episode.podcast.artworkUrl }}100x100bb.jpg"
-          onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" alt="{{ episode.podcast.title }}"
-          width="auto" height="auto" />
+          onerror="this.src='//dopepod.me/img/{{ episode.podcast.artworkUrl }}100x100bb.jpg'" title="{{ episode.podcast.title }}"
+          width="auto" height="auto" alt="Podcast artwork" />
       </a>
       <button class="dope-toggle exp" data-toggle="collapse" data-target="#previous-collapse{{ forloop.counter }}"
       aria-expanded="false" title="Show More">
