--- a/podcasts/templates/reviews.html
+++ b/podcasts/templates/reviews.html
@@ -1,4 +1,4 @@
-<div class="col-12 px-0 fade collapse showpod-collapse" id="reviews-collapse">
+<div class="col-12 px-0">
   <div class="results-bar color-3">
     <h1>
       Reviews
