--- a/podcasts/templates/episodes.html
+++ b/podcasts/templates/episodes.html
@@ -1,4 +1,4 @@
-<div class="col-12 px-0 fade collapse showpod-collapse show" id="episodes-collapse">
+<div class="col-12 px-0">
   <div class="results-bar color-3">
     <h1>
       Episodes
