--- a/podcasts/templates/results-options.html
+++ b/podcasts/templates/results-options.html
@@ -29,24 +29,28 @@
               {% endif %}
             </form>
           {% endif %}
-          <a class="btn-dope showpod-button" data-toggle="collapse" href="#episodes-collapse" aria-expanded="true" aria-controls="episodes-collapse"
-            title="Show Episodes">
+          <button class="btn-dope showpod-button" title="Show Episodes">
             <span class="active">
               Episodes
             </span>
-            <span class="exp-icon">
+            <span class="d-none">
               <i class="fas fa-bars"></i>
             </span>
-          </a>
-          <a class="btn-dope showpod-button" data-toggle="collapse" href="#reviews-collapse" aria-expanded="false" aria-controls="reviews-collapse"
-            title="Show Reviews">
+            <span class="active">
+              <i class="fas fa-arrow-down"></i>
+            </span>
+          </button>
+          <button class="btn-dope showpod-button" title="Show Reviews">
             <span class="active">
               Reviews
             </span>
-            <span class="exp-icon">
+            <span>
               <i class="fas fa-star"></i>
             </span>
-          </a>
+            <span class="d-none active">
+              <i class="fas fa-arrow-down"></i>
+            </span>
+          </button>
         {% elif results.view == "subscriptions" %}
           <a class="btn-dope unsubscribe-button" href="{% url 'subscriptions' %}" title="Unsubscribe">
             <span class="active">
