showpod-buttons fixed

--- a/index/static/style.css
+++ b/index/static/style.css
@@ -550,6 +550,9 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 #showpod-r ul li:last-child > * {
   margin-right: 5px;
 }
+.showpod-content {
+  position: relative;
+}
 
 /* EPISODES */
 .episode-hidden {
