--- a/index/templates/listen.html
+++ b/index/templates/listen.html
@@ -151,6 +151,9 @@
                 <span class="active">
                   Add
                 </span>
+                <span>
+                  <i class="fas fa-plus"></i>
+                </span>
               </button>
             </form>
             {% endif %}
