--- a/podcasts/templates/playlist.html
+++ b/podcasts/templates/playlist.html
@@ -9,7 +9,7 @@
         No episodes.
       </p>
       <p>
-        <a class="browse-link" href="{% url 'search' %}?view=grid">
+        <a class="browse-link" href="{% url 'search' %}">
           Find podcasts!
         </a>
       </p>
