--- a/podcasts/templates/previous.html
+++ b/podcasts/templates/previous.html
@@ -16,7 +16,7 @@
         </span>
       </button>
       <h1>
-        <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}" title="{{ episode.podcast.title }}">
+        <a class="showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}" title="{{ episode.podcast.title }}">
           {{ episode.podcast.title }}
         </a>
       </h1>
