--- a/podcasts/templates/results_bar.html
+++ b/podcasts/templates/results_bar.html
@@ -1,7 +1,7 @@
 {% if results.header %}
 <div class="row">
   <div class="col-12 results-bar color-4">
-    {% if results.extra_options %}
+    {% if results.extra_options == "all" %}
       <div class="dope-buttons float-left">
         <button class="btn-dope results-back" onclick="window.history.back()" title="Back">
           <span>
@@ -10,17 +10,27 @@
         </button>
       </div>
       <div class="dope-buttons dope-buttons-r float-right">
-        <a class="btn-dope" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true"
+        <button class="btn-dope" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true"
           aria-controls="results-collapse" title="Minimize">
           <span class="exp-icon exp-minus exp-nix">
             <i class="fas fa-plus"></i>
           </span>
-        </a>
+        </button>
         <a class="btn-dope index-link" href="/" title="Close">
           <span>
             <i class="fas fa-times"></i>
           </span>
         </a>
+      </div>
+    {% elif results.extra_options == "min" %}
+      <div class="dope-buttons float-left"></div>
+      <div class="dope-buttons dope-buttons-r float-right">
+        <button class="btn-dope" data-toggle="collapse" href="#results-collapse-{{ results.view }}" aria-expanded="true"
+          aria-controls="results-collapse" title="Minimize">
+          <span class="exp-icon exp-minus exp-nix">
+            <i class="fas fa-plus"></i>
+          </span>
+        </button>
       </div>
     {% endif %}
     <h1>
