subscriptions & playlist redone

--- a/index/templates/splashboard.html
+++ b/index/templates/splashboard.html
@@ -141,7 +141,7 @@
           <p>
             Login or signup for an account now.
             <br />
-            Subscribe to all your favorite podcasts.
+            Subscribe to your favorite podcasts.
             <br />
             Create a personal playlist.
           </p>
