--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -50,7 +50,7 @@
   <div class="container-fluid">
     <div class="row" id="main-wrapper">
       <div class="col-12 order-1 col-lg-3 order-lg-1">
-        <div class="row drop sticky" id="subscriptions">
+        <div class="row drop" id="subscriptions">
           {% if user.is_authenticated %}
             {% if subscriptions %} {% with subscriptions as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
           {% endif %}
@@ -92,7 +92,7 @@
         </div>
       </div>
       <div class="col-12 order-2 col-lg-3 order-lg-3">
-        <div class="row drop sticky" id="playlist">
+        <div class="row drop" id="playlist">
           {% if user.is_authenticated %}
             {% if playlist %} {% with playlist as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
           {% endif %}
@@ -117,6 +117,7 @@
   </div>
   <script src="//cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/10.17.0/lazyload.min.js"></script> 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/sticky-kit/1.1.3/sticky-kit.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
   <script src="//stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
   <script src="{% static 'scripts.min.js' %}"></script>
