--- a/index/templates/base.html
+++ b/index/templates/base.html
@@ -50,14 +50,14 @@
   <!-- MAIN CONTENT -->
   <div class="container-fluid">
     <div class="row" id="main-wrapper">
-      <div class="col-12 order-1 col-lg-3 order-lg-1">
+      <div class="col-12 order-1 col-xl-3 order-xl-1">
         <div class="row drop" id="subscriptions">
           {% if user.is_authenticated %}
             {% if subscriptions %} {% with subscriptions as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
           {% endif %}
         </div>
       </div>
-      <div class="col-12 order-3 col-lg-6 order-lg-2">
+      <div class="col-12 order-3 col-xl-6 order-xl-2">
         <!-- CENTER STAGE -->
         <div class="row drop" id="center-stage">
           {% block center-stage %} {% endblock %}
@@ -92,7 +92,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 order-2 col-lg-3 order-lg-3">
+      <div class="col-12 order-2 col-xl-3 order-xl-3">
         <div class="row drop" id="playlist">
           {% if user.is_authenticated %}
             {% if playlist %} {% with playlist as results %} {% include "results_base.min.html" %} {% endwith %} {% endif %}
@@ -116,7 +116,7 @@
   <div id="loaders">
     {% include "button-loading.min.html" %}
   </div>
-  <script async src="//cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/10.17.0/lazyload.min.js"></script> 
+  <script defer src="//cdnjs.cloudflare.com/ajax/libs/vanilla-lazyload/10.17.0/lazyload.min.js"></script> 
   <script defer src="//ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script defer src="//cdnjs.cloudflare.com/ajax/libs/sticky-kit/1.1.3/sticky-kit.min.js"></script>
   <script defer src="//cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
