pagination not showing on last page fixed

--- a/podcasts/templates/episodes.min.html
+++ b/podcasts/templates/episodes.min.html
@@ -1,1 +1,1 @@
-<div class="col-12 px-0"><div class="results-bar color-3"><h1>Episodes</h1></div>{% include "pagination.min.html" %} {% include "episodes-table.min.html" %} {% include "pagination.min.html" %}</div>{% include "loader.min.html" %}
+<div class="col-12 px-0"><div class="results-bar color-3"><h1>Episodes</h1></div></div><div class="col-12 px-0">{% include "pagination.min.html" %}</div><div class="col-12 px-0">{% include "episodes-table.min.html" %}</div><div class="col-12 px-0">{% include "pagination.min.html" %}</div>{% include "loader.min.html" %}
