--- a/podcasts/templates/episodes-table.html
+++ b/podcasts/templates/episodes-table.html
@@ -1,167 +1,169 @@
-<table class="table episodes-table">
-  <thead>
-    <tr>
-      <th class="order">
-        <span>#</span>
-      </th>
-      <th>
-        <span>Title</span>
-      </th>
-      <th class="released">
-        <span>Released</span>
-      </th>
-      <th class="size">
-        <span>Size</span>
-      </th>
-      <th class="length">
-        <span>Length</span>
-      </th>
-      <th class="expand">
-      </th>
-    </tr>
-  </thead>
-  <tbody>
-    {% for episode in results.episodes %}
-      <tr class="episode-header exp{% if forloop.counter|divisibleby:2 %} color-3{% endif %}" tabindex="0" data-toggle="collapse"
-        data-target="#more-collapse-{{ results.view }}-{{ episode.position }}" aria-expanded="false">
-        <th class="order color-3" scope="row">
-          <span>{{ episode.position }}</span>
+<div class="col-12 px-0">
+  <table class="table episodes-table">
+    <thead>
+      <tr>
+        <th class="order">
+          <span>#</span>
         </th>
-        <td class="title">
-          {% if results.view == "playlist" %}
-          <strong>{{ episode.podcast.title }} - </strong>
-          {% endif %}
-          <span>{{ episode.title }}</span>
-          {% if episode.is_new %}
-          <span class="new">NEW</span>
-          {% endif %}
-        </td>
-        <td>
-          {% if episode.pubDate %}
-          <span class="date" data-utc="{{ episode.pubDate|date:'U' }}">{{ episode.pubDate|date:"d M Y H:i" }}</span>
-          {% else %}
-          <span>N/A</span>
-          {% endif %}
-        </td>
-        <td>
-          <span>{% if episode.size %}{{ episode.size }}{% else %}N/A{% endif %}</span>
-        </td>
-        <td>
-          <span>{% if episode.length %}{{ episode.length }}{% else %}N/A{% endif %}</span>
-        </td>
-        <td>
-          <span class="exp-icon" data-toggle="collapse" data-target="#more-collapse-{{ results.view }}-{{ episode.position }}" aria-expanded="false">
-            <i class="fas fa-ellipsis-v"></i>
-          </span>
-        </td>
+        <th>
+          <span>Title</span>
+        </th>
+        <th class="released">
+          <span>Released</span>
+        </th>
+        <th class="size">
+          <span>Size</span>
+        </th>
+        <th class="length">
+          <span>Length</span>
+        </th>
+        <th class="expand">
+        </th>
       </tr>
-      <tr class="{% if results.view == 'playlist' and forloop.last or results.view == 'showpod' and not results.pages and forloop.last %}noborder{% endif%}">
-        <td colspan="6" class="episode-hidden{% if forloop.counter|divisibleby:2 %} color-3{% endif %}">
-          <div class="collapse fade more-collapse" id="more-collapse-{{ results.view }}-{{ episode.position }}">
-            <div class="dope-result">
-              <p>
-                Description:
-              </p>
-              <p>
-                {% if episode.description %}
-                {{ episode.description }}
-                {% else %}
-                No description
-                {% endif %}
-              </p>
-              <div class="dope-buttons dope-buttons-r px-0">
-                {% if results.view == "playlist" %}
-                <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
-                  {% csrf_token %}
-                  <input type="hidden" name="mode" value="remove" />
-                  <input type="hidden" name="pos" value="{{ episode.position }}" />
-                  <button class="btn-dope playlist-remove" type="submit" title="Remove">
-                    <span class="active">
-                      <i class="fas fa-times icon"></i>
-                    </span>
-                  </button>
-                </form>
-                {% if not forloop.first %}
-                <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
-                  {% csrf_token %}
-                  <input type="hidden" name="mode" value="up" />
-                  <input type="hidden" name="pos" value="{{ episode.position }}" />
-                  <button class="btn-dope playlist-move-up" type="submit" title="Move Up">
-                    <span class="active">
-                      <i class="fas fa-arrow-up"></i>
-                    </span>
-                  </button>
-                </form>
-                {% endif %}
-                {% if not forloop.last %}
-                <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
-                  {% csrf_token %}
-                  <input type="hidden" name="mode" value="down" />
-                  <input type="hidden" name="pos" value="{{ episode.position }}" />
-                  <button class="btn-dope playlist-move-down" type="submit" title="Move Down">
-                    <span class="active">
-                      <i class="fas fa-arrow-down"></i>
-                    </span>
-                  </button>
-                </form>
-                {% endif %}
-                {% endif %}
-                <form class="playlist-form" action="{% url 'playlist' %}" method="POST" target="_blank">
-                  {% csrf_token %}
-                  <input type="hidden" name="mode" value="play" />
-                  {% if results.view == "playlist" %}
-                  <input type="hidden" name="pos" value="{{ episode.position }}" />
+    </thead>
+    <tbody>
+      {% for episode in results.episodes %}
+        <tr class="episode-header exp{% if forloop.counter|divisibleby:2 %} color-3{% endif %}" tabindex="0" data-toggle="collapse"
+          data-target="#more-collapse-{{ results.view }}-{{ episode.position }}" aria-expanded="false">
+          <th class="order color-3" scope="row">
+            <span>{{ episode.position }}</span>
+          </th>
+          <td class="title">
+            {% if results.view == "playlist" %}
+            <strong>{{ episode.podcast.title }} - </strong>
+            {% endif %}
+            <span>{{ episode.title }}</span>
+            {% if episode.is_new %}
+            <span class="new">NEW</span>
+            {% endif %}
+          </td>
+          <td>
+            {% if episode.pubDate %}
+            <span class="date" data-utc="{{ episode.pubDate|date:'U' }}">{{ episode.pubDate|date:"d M Y H:i" }}</span>
+            {% else %}
+            <span>N/A</span>
+            {% endif %}
+          </td>
+          <td>
+            <span>{% if episode.size %}{{ episode.size }}{% else %}N/A{% endif %}</span>
+          </td>
+          <td>
+            <span>{% if episode.length %}{{ episode.length }}{% else %}N/A{% endif %}</span>
+          </td>
+          <td>
+            <span class="exp-icon" data-toggle="collapse" data-target="#more-collapse-{{ results.view }}-{{ episode.position }}" aria-expanded="false">
+              <i class="fas fa-ellipsis-v"></i>
+            </span>
+          </td>
+        </tr>
+        <tr class="{% if results.view == 'playlist' and forloop.last or results.view == 'showpod' and not results.pages and forloop.last %}noborder{% endif%}">
+          <td colspan="6" class="episode-hidden{% if forloop.counter|divisibleby:2 %} color-3{% endif %}">
+            <div class="collapse fade more-collapse" id="more-collapse-{{ results.view }}-{{ episode.position }}">
+              <div class="dope-result">
+                <p>
+                  Description:
+                </p>
+                <p>
+                  {% if episode.description %}
+                  {{ episode.description }}
                   {% else %}
-                  <input type="hidden" name="signature" value="{{ episode.signature }}" />
+                  No description
                   {% endif %}
-                  <button class="btn-dope playlist-play" type="submit" title="Play Episode">
+                </p>
+                <div class="dope-buttons dope-buttons-r px-0">
+                  {% if results.view == "playlist" %}
+                  <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="mode" value="remove" />
+                    <input type="hidden" name="pos" value="{{ episode.position }}" />
+                    <button class="btn-dope playlist-remove" type="submit" title="Remove">
+                      <span class="active">
+                        <i class="fas fa-times icon"></i>
+                      </span>
+                    </button>
+                  </form>
+                  {% if not forloop.first %}
+                  <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="mode" value="up" />
+                    <input type="hidden" name="pos" value="{{ episode.position }}" />
+                    <button class="btn-dope playlist-move-up" type="submit" title="Move Up">
+                      <span class="active">
+                        <i class="fas fa-arrow-up"></i>
+                      </span>
+                    </button>
+                  </form>
+                  {% endif %}
+                  {% if not forloop.last %}
+                  <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="mode" value="down" />
+                    <input type="hidden" name="pos" value="{{ episode.position }}" />
+                    <button class="btn-dope playlist-move-down" type="submit" title="Move Down">
+                      <span class="active">
+                        <i class="fas fa-arrow-down"></i>
+                      </span>
+                    </button>
+                  </form>
+                  {% endif %}
+                  {% endif %}
+                  <form class="playlist-form" action="{% url 'playlist' %}" method="POST" target="_blank">
+                    {% csrf_token %}
+                    <input type="hidden" name="mode" value="play" />
+                    {% if results.view == "playlist" %}
+                    <input type="hidden" name="pos" value="{{ episode.position }}" />
+                    {% else %}
+                    <input type="hidden" name="signature" value="{{ episode.signature }}" />
+                    {% endif %}
+                    <button class="btn-dope playlist-play" type="submit" title="Play Episode">
+                      <span class="active">
+                        Play
+                      </span>
+                      <span>
+                        <i class="fas fa-play"></i>
+                      </span>
+                    </button>
+                  </form>
+                  <a class="btn-dope" href="{{ episode.url }}" title="Download Episode" download>
                     <span class="active">
-                      Play
+                      Download
                     </span>
                     <span>
-                      <i class="fas fa-play"></i>
+                      <i class="fas fa-download"></i>
                     </span>
-                  </button>
-                </form>
-                <a class="btn-dope" href="{{ episode.url }}" title="Download Episode" download>
-                  <span class="active">
-                    Download
-                  </span>
-                  <span>
-                    <i class="fas fa-download"></i>
-                  </span>
-                </a>
-                {% if results.view == "playlist" %}
-                <a class="btn-dope showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}"
-                  title="{{ episode.podcast.title }}">
-                  <span class="active">
-                    Show
-                  </span>
-                  <span>
-                    <i class="fas fa-bars"></i>
-                  </span>
-                </a>
-                {% endif %}
-                {% if user.is_authenticated and results.view == "showpod" %}
-                <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
-                  {% csrf_token %}
-                  <input type="hidden" name="mode" value="add" />
-                  <input type="hidden" name="signature" value="{{ episode.signature }}" />
-                  <button class="btn-dope" type="submit" title="Add to Playlist">
+                  </a>
+                  {% if results.view == "playlist" %}
+                  <a class="btn-dope showpod-link" data-podid="{{ episode.podcast.podid }}" href="{% url 'showpod' podid=episode.podcast.podid %}"
+                    title="{{ episode.podcast.title }}">
                     <span class="active">
-                      Add
+                      Show
                     </span>
                     <span>
-                      <i class="fas fa-plus"></i>
+                      <i class="fas fa-bars"></i>
                     </span>
-                  </button>
-                </form>
-                {% endif %}
+                  </a>
+                  {% endif %}
+                  {% if user.is_authenticated and results.view == "showpod" %}
+                  <form class="playlist-form" action="{% url 'playlist' %}" method="POST">
+                    {% csrf_token %}
+                    <input type="hidden" name="mode" value="add" />
+                    <input type="hidden" name="signature" value="{{ episode.signature }}" />
+                    <button class="btn-dope" type="submit" title="Add to Playlist">
+                      <span class="active">
+                        Add
+                      </span>
+                      <span>
+                        <i class="fas fa-plus"></i>
+                      </span>
+                    </button>
+                  </form>
+                  {% endif %}
+                </div>
               </div>
             </div>
-          </div>
-        </td>
-      </tr>
-    {% endfor %}
-  </tbody>
-</table>
+          </td>
+        </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
