responsive episodes-table

--- a/index/templates/dopebar.html
+++ b/index/templates/dopebar.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-3 col-lg-5" id="dopebar-l">
-        <button class="dope-link d-inline-block d-xl-none" data-toggle="collapse" href="#dopebar-collapse" aria-expanded="false"
+        <button class="dope-link d-inline-block d-xl-none" data-toggle="collapse" data-target="#dopebar-collapse" aria-expanded="false"
           aria-controls="results-collapse-{{ results.drop }}" aria-label="dopebar-collapse">
           <i class="fas fa-bars" title="Expand"></i>
         </button>
