--- a/index/templates/search-form.html
+++ b/index/templates/search-form.html
@@ -1,7 +1,7 @@
 <form class="search-form" method="GET" action="{% url 'search' %}">
   <label for="q" class="sr-only">Search for podcasts</label>
-  <input class="dope-field q" type="text" name="q" type="search" placeholder="Search for podcasts"
-  aria-label="Search for podcasts" maxlength="30" autocomplete="off" accept-charset="utf-8" />
+  <input class="dope-field q" name="q" type="search" placeholder="Search for podcasts"
+  aria-label="Search for podcasts" maxlength="30" autocomplete="off" />
   <button class="search-button" type="submit" title="Search">
     <i class="fas fa-search"></i>
   </button>
