--- a/index/static/style.css
+++ b/index/static/style.css
@@ -574,6 +574,10 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .episode-header {
   cursor: pointer;
 }
+.episode-header td,
+.episode-header th {
+  min-height: 30px;
+}
 .episodes-table .order {
   text-align: center;
   width: 45px;
@@ -1130,5 +1134,38 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   }
   .episodes-table .expand {
     width: 20px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  table thead {
+    border: none;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+  
+  table tr {
+    display: block;
+  }
+  
+  table td,
+  table th {
+    display: block;
+    text-align: right;
+  }
+  
+  table td::before,
+  table th::before {
+    content: attr(data-label);
+    float: left;
+  }
+  .episodes-table .order {
+    width: auto;
+    text-align: right;
   }
 }
